site-banner flex, alignment, white-space fixes.

--- a/app/javascript/stylesheets/portrait/_base.scss
+++ b/app/javascript/stylesheets/portrait/_base.scss
@@ -20,6 +20,7 @@
 		font-family: $font_b;
 		font-weight: 300;
 		color: map-get($theme-text-colors, 'brand');
+		white-space: normal;
 	}
 	#site-banner-subtitle {
 		display: block;
