--- a/app/javascript/stylesheets/signature/_base.scss
+++ b/app/javascript/stylesheets/signature/_base.scss
@@ -34,6 +34,7 @@ header[role='banner'] {
 	}
 	#site-title {
 		font-family: $font_0, $font_3, $font_1, $font_2;
+		white-space: normal;
 	}
 }
 
@@ -168,7 +169,7 @@ header[role='banner'] {
 }
 @media(max-width: 991px) and (min-width: 768px) {
 	#site-title {
-		padding-top: 1.2rem;
+		padding-top: 0.8rem;
 		font-size: 1.2em;
 	}
 	#site-banner-subtitle {
